# incremental-reading

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Incremental_Reading_Extension.py  LICENSE  LICENSE-ISC  LICENSE.md  Makefile  README.html  README.md  View_Size_Adjust.py  View_Size_Adjust_and_Incremental_Reading_Extension_addons_-_Google_Groups.html  convert-readme.py  ir_addon.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
doc/: View_Size_Adjust_and_Incremental_Reading_Extension_addons_-_Google_Groups.html
docs/: index.html
ir/: __init__.py  _version.py  about.py  epub.py  gui.py  importer.py  javascript.js  main.py  manifest.json  pocket.py  requirements.in  requirements.txt  schedule.py  settings.py  text.py  util.py  view.py
ir/data/: colors.u8
ir/importer/: __init__.py  base_importer.py  concrete_importers.py  epub.py  exceptions.py  html_cleaner.py  local_file.py  models.py  pocket.py  web.py
ir/js/: scroll.js  text.js  width.js
ir/lib/: cgi.py  feedparser.py
ir/web/: model.css  scroll.js  text.js  width.js
tests/: __init__.py  test_scheduler.py  test_settings.py
