[tool.poetry]
package-mode = false
name = "incremental-reading-anki"
version = "4.12.0"
description = "Incremental Reading for Anki"
authors = [
    "Tiago Barroso",
    "Frank Kmiec",
    "Aleksej",
    "Christian Weiß",
    "Timothée Chauvin",
    "Joseph Lorimer <joseph@lorimer.me>",
    "Vy Hong <contact@vyhong.me>"]
license = "ISC"
readme = "README.md"
homepage = "https://ankiweb.net/shared/info/999215520"
repository = "https://github.com/tvhong/incremental-reading/"

packages = [{include = "ir"}]

include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
aqt = "^24.11"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14"
pylint = "^3.3.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
PyQt5 = "^5.15.10"
PyQt5-stubs = "^5.15.5"
markdown2 = "^2.5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry_bumpversion.file."ir/_version.py"]
[tool.poetry_bumpversion.file."ir/manifest.json"]
[tool.poetry_bumpversion.file."CHANGELOG.md"]
search = '[Unreleased]'
replace = '[{new_version}]'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3 # Vertical Hanging Indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["ir"]
known_third_party = ["anki", "aqt", "bs4", "requests"]

[tool.black]
line-length = 88
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/ir/lib/
'''